--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,12 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.4.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
